--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,21 @@
 # Install dependencies only when needed
 FROM node:18-alpine AS deps
 WORKDIR /app
-COPY frontend/package.json frontend/package-lock.json* frontend/pnpm-lock.yaml* ./
-RUN npm install
+COPY frontend/package.json frontend/package-lock.json* 
+RUN yarn install
 
 # Rebuild the source code only when needed
 FROM node:18-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY frontend/ ./
-RUN npm run build
+RUN yarn build
 
 # Production image, copy all the files and run next
 FROM node:18-alpine AS runner
 WORKDIR /app
 
-ENV NODE_ENV production
+ENV NODE_ENV development
 
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
@@ -24,4 +24,4 @@ COPY --from=builder /app/package.json ./package.json
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["yarn", "dev"]
