--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,10 +17,7 @@ WORKDIR /app
 
 ENV NODE_ENV development
 
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app ./
 
 EXPOSE 3000
 
